modified:   index.html

--- a/index.html
+++ b/index.html
@@ -241,21 +241,21 @@
                 <div class="row">
                     <div class="col-sm-10 offset-0 offset-sm-1">
                      
-                        <input class="me-3" placeholder="Name" type="text" name="fullname">
+                        <input class="me-3" placeholder="Name" type="text" name="fullname" required>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-10 offset-0 offset-sm-1">
                         <br>
-                        <input class="me-3" class="form-control" placeholder="Email" type="email" id="email" name="email"><br>
+                        <input class="me-3" class="form-control" placeholder="Email" type="email" id="email" name="email" required><br>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-10 offset-0 offset-sm-1 mb-3">
                         <br>
-                        <textarea name="message" placeholder="Message" rows="6" cols="38"></textarea>
+                        <textarea name="message" placeholder="Message" rows="6" cols="38" required></textarea>
                         
                     </div>
                 </div>
