modified:   bootstrap-svgrepo-com.svg 	modified:   css-svgrepo-com.svg 	modified:   html-svgrepo-com.svg 	modified:   index.html 	modified:   js-svgrepo-com.svg 	modified:   laravel-svgrepo-com.svg 	modified:   mysql-svgrepo-com.svg 	modified:   php-svgrepo-com.svg 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="container-fluid" style="background-color: #ecf0f1; min-height:19rem;">
     
         <div id="skillsandprojects"class="text-center" style="border:2px solid none">
-            <h4 class="pt-5" style="color: black;font-family: 'Lato', sans-serif;">Technologies I mainly use</h4>
+            <h4 class="pt-5" style="color: black">Technologies I mainly use</h4>
            
             <img class="me-4 mt-4" src="html-svgrepo-com.svg" alt="">
             <img class="me-4 mt-4" src="css-svgrepo-com.svg" alt="">
