--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                         <h2 class="mt-3 mb-4">My Portfolio</h2>
                 
                         <p style="line-height: 1.6">
-                            My minimalist personal website that I created to showcase my skills and projects 
-                            that I made in one place.</p>
+                            This is my minimalist website, I decided to make a landing page to showcase my skills, talents and projects, 
+                            all in one place.</p>
                 
                      <div class="d-flex align-items-center mt-4" 
                      style="border-top: 1px solid gray;
