--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Livewire</h6>
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">PHP</h6>
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">MySQL</h6>
-                      <h6 class="me-4 pt-3 text-success" style="font-size: 15px">Deployed using Hostinger PH</h6>
-                      <h6 class="me-4 pt-3 text-primary" style="font-size: 15px; cursor: pointer;"><u><a href="https://uerc-secretariat.com/">https://uerc-secretariat.com/</a></u></h6>
+                      <h6 class="me-4 pt-3" style="font-size: 15px; color: #66FF99">Deployed using Hostinger PH</h6>
+                      <h6 class="me-4 pt-3" style="font-size: 15px; cursor: pointer; color: dodgerblue"><u><a target="_blank" href="https://uerc-secretariat.com/">https://uerc-secretariat.com/</a></u></h6>
                    </div>
                   </div>
 
