--- a/index.html
+++ b/index.html
@@ -185,9 +185,11 @@
          <div class="row">
                   <div class="col px-2 px-sm-5">
                       <h5 class="text-muted mt-3">Database System</h5>
-                      <h2 class="mt-3 mb-4">University Ethics Review Committee Database System (Adamson University)</h2>
+                      <h2 class="mt-3 mb-4">Adamson University Center for Research and Development</h2>
               
-                      <p style="line-height: 1.6">This enterprise system is our very own Capstone Project! Mark IT is a social media platform which is very similar to Meta (Facebook), the only difference is that the content are exclusively surveys only. All other functionalities of Meta such as Chat System, Groups, Profiles, & Followings are all present in Mark IT!</p>
+                      <p style="line-height: 1.6">
+                        This database system is employed to record and manage students' research, particularly their thesis projects. Adamson University's Center for Research and Development is responsible for overseeing research activities across various colleges, including the College of Science, Business Administration, Engineering, and more. Once research documents are finalized and submitted into the system, it automatically generates certificates in PDF Format, which are then distributed to the researchers.
+                     </p>
               
                    <div class="d-flex align-items-center mt-4" 
                    style="border-top: 1px solid gray;
