modified:   index.html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div>
                     <h3 class="pt-3" 
                     style="color:gray; line-height: 1.4; font-family: 'Source Sans Pro', sans-serif;">
-                    I'm a <span style="color: orange; font-weight: bold;">Full-Stack Web Developer</span>
-                and a 4th year IT Student in Adamson University.</h3>
+                    I'm a <span style="color: orange; font-weight: bold;">Freelance Full-Stack Web Developer</span>
+                and a BSIT Fresh Graduate from Adamson University.</h3>
                 </div>
                 <div class="row">
                      <div class="col-12 col-md-5 col-md-4 col-xl-5">
