--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <!---------------------------------------------THIRD SECTION/ MY PROJECTS---------------------------------------------->
         
 
-<div id="projects" class="container-fluid" style="background-color: #2c3e50;margin-top:-30px">
+<div id="projects" class="container-fluid mb-3" style="background-color: #2c3e50;margin-top:-30px">
             <div class="row">
                 <div class="col" style="padding-top: 180px">
                     <div class="d-flex justify-content-center">
