modified:   index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <!---------------------------------------------THIRD SECTION/ MY PROJECTS---------------------------------------------->
         
 
-<div id="projects" class="container-fluid pb-3" style="background-color: #2c3e50;margin-top:-30px">
+<div id="projects" class="container-fluid" style="background-color: #2c3e50;margin-top:-30px">
             <div class="row">
                 <div class="col" style="padding-top: 180px">
                     <div class="d-flex justify-content-center">
@@ -165,7 +165,7 @@
                 </div>
             </div>
 
-        <div class="container">
+        <div class="container pb-5">
             <div class="row">
                 <div class="col" 
                 style="border-top-left-radius:20px;
