modified:   index.html

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                     <div class="text-center pt-4">
                         <a href="https://github.com/alexistinio/uerc-demo" target="_blank" class="btn btn-outline-light px-4 me-2" style="border-radius: 25px; padding: 11px 0; font-size: 12px">Github</a>
-                        <a href="https://uerc-test.online/login" class="btn btn-outline-light px-4" style="border-radius: 25px; padding: 11px 0; font-size: 12px">Live Demo</a>
+                        <a href="https://uerc-test.online" target="_blank" class="btn btn-outline-light px-4" style="border-radius: 25px; padding: 11px 0; font-size: 12px">Live Demo</a>
                     </div>
               
               
