--- a/index.html
+++ b/index.html
@@ -204,13 +204,15 @@
                             <div class="d-flex align-items-center mt-4" 
                             style="border-top: 1px solid gray;
                             min-height: 4rem; flex-wrap: wrap;">
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">HTML5</h6>
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">CSS3</h6>
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Bootstrap 5</h6>
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Laravel</h6>
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Livewire</h6>
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">PHP</h6>
-                               <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">MySQL</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">HTML5</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">CSS3</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Bootstrap 5</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Laravel</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Livewire</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Javascript</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">jQuery</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">PHP</h6>
+                                  <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">MySQL</h6>
                               
                             </div>
                     </div>
@@ -235,6 +237,8 @@
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Bootstrap 5</h6>
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Laravel</h6>
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Livewire</h6>
+                      <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">Javascript</h6>
+                      <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">jQuery</h6>
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">PHP</h6>
                       <h6 class="me-4 pt-3" style="font-size: 13px; color: orange;">MySQL</h6>
                       <h6 class="me-4 pt-3" style="font-size: 15px; color: #66FF99">Deployed using Hostinger PH</h6>
